8253161: [lworld] C1's substitutability check should use andptr instead of andl for mark word